--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
       }
     },
     "require": {
-        "slim/slim": "3.*"
+        "slim/slim": "3.*",
+        "illuminate/database": "5.5.*"
     }
 }
